--- a/netlify/functions/ssr-app/index.server.html
+++ b/netlify/functions/ssr-app/index.server.html
@@ -12,5 +12,5 @@
 <body>
   <app-root></app-root>
 
-<script src="polyfills-FFHMD2TL.js" type="module"></script><script src="main-6UGC52O5.js" type="module"></script></body>
+<script src="polyfills-FFHMD2TL.js" type="module"></script><script src="main-GVWDHAH7.js" type="module"></script></body>
 </html>
